# fastllm_windows

./: CMakeLists.txt  README.md
include/: chatglm.h  fastllm.h  main.h
src/: chatglm.cpp  fastllm.cpp  main.cpp
